Modifies classes